--- a/src/component/layout/theme.css
+++ b/src/component/layout/theme.css
@@ -57,7 +57,7 @@ p {
 }
 
 .navbar-side .nav > li > a > i {
-    color: #B5B5B5;
+    color: #fff;
     padding: 8px;
     width: 30px;
     text-align: center;
@@ -79,7 +79,7 @@ p {
     top: 60px;
     bottom: 0;
     overflow-y : auto;
-    background: #2b2e33;
+    background: #6f6dd8;
 }
 
 #page-wrapper {
@@ -393,7 +393,7 @@ footer p {
     font-weight: 700;
     text-transform: uppercase;
     line-height: 30px;
-    background: #32323a;
+    background: #6f6dd8;
 }
 
 .navbar-brand b {
@@ -461,7 +461,7 @@ footer p {
 }
 
 .active-menu {
-    background-color: #2DAFCB !important;
+    background-color: #5a5aba !important;
     color: #fff !important;
 }
 
@@ -504,7 +504,7 @@ footer p {
 }
 
 .sidebar-collapse .nav > li > a {
-    color: #B5B5B5;
+    color: #fff;
     background: transparent;
     text-shadow: none;
 }
@@ -518,7 +518,7 @@ footer p {
 }
 
 ul.nav.nav-second-level.collapse.in {
-    background: #17191B;
+    background: #6f6dd8;
 }
 
 .sidebar-collapse .nav > li > a:hover,
